--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">CensoAlumbradoPublico</string>
     <string name="title_home">Lista</string>
     <string name="title_dashboard">Censo</string>
-    <string name="title_notifications">Postes</string>
+    <string name="title_notifications">Poste</string>
     <string name="cve_mun">CVE MUN</string>
     <string name="municipio">Municipio</string>
     <string name="divisi_n">División</string>
@@ -38,6 +38,7 @@
     <string name="equipo_aux">Equipo Aux</string>
     <string name="actualizar_ubicaci_n">Actualizar ubicación</string>
     <string name="gps">GPS</string>
+    <string name="postes">Postes</string>
     <string-array name="calleMargen">
         <item>Derecha</item>
         <item>Izquierda</item>
